@@ -388,6 +388,7 @@ BA  155- qfisom: allow to give the automorphism group of the second lattice
     158- vecsort / vecsearch: allow sort/search wrt to a "key" (closure with
          arity 1)
     159- [libpari] gprec_wensure
+    160- allow forstep(a,b, Mod(c,q), ...)
 
   Changed
       1- rewrite bnfnarrow
